2024-04-11  Sam Varshavchik  <mrsam@courier-mta.com>

	* Release 0.93

2024-04-10  Sam Varshavchik  <mrsam@courier-mta.com>

	* inittab.C (inittab): Add a system/network-online target stub.
	Include system/networkmanager-wait-online in the package. Increase
	/etc/rc.d/rc.M's starting timeout to five minutes.

	* proc_container.C (proc_containerObj::compare_and_log): improve
	logging of updated containers.

2024-04-06  Sam Varshavchik  <mrsam@courier-mta.com>

	* Release 0.92

	* hook.C: Packaging improvements. Going forward the vera Slackware
	package can be upgraded without manually reverting to sysvinit,
	first.

2024-04-03  Sam Varshavchik  <mrsam@courier-mta.com>

	* verac_check_hook.c (check_hookfile): Sync the filesystems
	before running sysinit.

2024-04-01  Sam Varshavchik  <mrsam@courier-mta.com>

	* Transparent integration with /etc/rc.d/rc.M. The "enable" and
	"disable" commands for containers that correspond to /etc/rc.d/rc.*
	scripts automatically update the scripts' execute permissions.

2024-03-31  Sam Varshavchik  <mrsam@courier-mta.com>

	* "status" command: move more pid-related logic to the requesting
	process, out of pid 1. Various fixes.

	* Fix race condition if a container happens to stop during a re-exec.

2024-03-25  Sam Varshavchik  <mrsam@courier-mta.com>

	* Release 0.91

	* Log runlevel switches, including startup/shutdown.

2024-03-05  Sam Varshavchik  <mrsam@courier-mta.com>

	* Release 0.90

	* When running start/stop/reload/restart, copy the output
	from the container to the requester's shell's standard output.

2024-03-03  Sam Varshavchik  <mrsam@courier-mta.com>

	* vera.C (dump_terse): "state" maybe affixed by "(manual)", so put
	it in quotes.

	* inittab.C: Improve converted unit descriptions

	* proc_container_group.C: fix duplicated output to due unflushed
	buffer, oops.

	* Fix double invocation of rc.local_shutdown.

2024-03-02  Sam Varshavchik  <mrsam@courier-mta.com>
